2005-10-17  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Geoff. Code changes by Darin.

	- some micro-optimizations to FastMalloc to reduce math and branches.

        * kxmlcore/FastMalloc.cpp:
        (KXMLCore::TCMalloc_Central_FreeList::Populate):
        (KXMLCore::fastMallocRegisterThread):
        (KXMLCore::TCMalloc_ThreadCache::GetCache):
        (KXMLCore::TCMalloc_ThreadCache::GetCacheIfPresent):

2005-10-15  Maciej Stachowiak  <mjs@apple.com>

	Reverted fix for this bug, because it was part of a time range that caused a performance
	regression:
	
	<rdar://problem/4260481> Remove Reference type from JavaScriptCore

2005-10-15  Darin Adler  <darin@apple.com>

        * kxmlcore/HashTable.cpp: Fixed build failure (said hashtable.h instead of HashTable.h).

2005-10-14  Geoffrey Garen  <ggaren@apple.com>

        Style changes recommended by Darin.
        
        Changed to camelCase, changed ValueImp* to ValueImp *.

        * kjs/simple_number.h:
        (KJS::SimpleNumber::make):
        (KJS::SimpleNumber::value):

2005-10-11  Geoffrey Garen  <ggaren@apple.com>

        Added regexp_object.lut.h build phase from JavaScriptCore
        to JavaScriptCore+SVG.

        Reviewed by mitz.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2005-10-11  Geoffrey Garen  <ggaren@apple.com>

        Fixed build bustage from last checkin (stray characters
        in the project file).

        Reviewed by mitz.

        * JavaScriptCore.xcodeproj/project.pbxproj:

2005-10-11  Geoffrey Garen  <ggaren@apple.com>

        New JavaScriptCore test results to reflect the last change.

        * tests/mozilla/expected.html:

2005-10-10  Geoffrey Garen  <ggaren@apple.com>

        - Implemented caching of match state inside the global RegExp object
          (lastParen, leftContext, rightContext, lastMatch, input).

          exec(), test(), match(), search(), and replace() now dipatch regular